<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back_to_main"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_back_to_main"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_details_title"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details_title"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/task_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_id_label"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnEditTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnAckTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_task"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnDeleteTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task_confirm"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>


</LinearLayout>
