<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddTaskActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back_to_main"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_back_to_main"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back_24"
            android:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_task"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description" />

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Настройка повторения"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <!-- Выбор единицы времени (interval) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Единица времени:"/>

    <Spinner
        android:id="@+id/spinner_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Количество единиц (amount) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сколько таких единиц?"/>

    <NumberPicker
        android:id="@+id/number_picker_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Разделение на части (quant) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Разделить на части:"/>

    <NumberPicker
        android:id="@+id/number_picker_quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:value="1"/>

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
