<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground">
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4.5dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_title"
                android:maxLines="1"
                android:textSize="30sp"
                android:textColor="@color/titleText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">
            <ImageButton
                android:id="@+id/open_settings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/settings"
                android:contentDescription="@string/content_description_open_settings"
                android:scaleType="fitCenter"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">
            <ImageButton
                android:id="@+id/add_task"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/add"
                android:contentDescription="@string/content_description_add_task"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:clipToPadding="false" />
</LinearLayout>